--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         minSdkVersion = 16
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        compileSdkVersion = 32
+        targetSdkVersion = 32
     }
     repositories {
         google()
@@ -12,9 +12,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+      classpath 'com.android.tools.build:gradle:4.2.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
+
+      // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
